--- a/daltadka.css
+++ b/daltadka.css
@@ -1,4 +1,10 @@
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  body {
     font-family: 'Segoe UI', sans-serif;
     background: url('https://www.transparenttextures.com/patterns/black-linen.png');
     background-color: #000;
