Update about.css-changed css

--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    background-color:black; 
+    background-color:rgb(26, 8, 54); 
     background-position: center;
     margin: 0;
     font-family: 'Arial', sans-serif;
